--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>Home</title>
 </head>
 <body>
-    
+    <div class="main">
+        <h1>REL Assesment RA3 2024 (Term 3)</h1>
+        <h2>Welcome!! Press Begin to start!!</h2>
+        <p>This is what goes along with my video for better understanding</p>
+        <button onclick="window.location.href='start.html'">Begin</button>
+
+    </div>
 </body>
 </html>
