--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
         <h2>Welcome!! Press Begin to start!!</h2>
         <p>This is what goes along with my video for better understanding</p>
         <button onclick="window.location.href='start.html'">Begin</button>
-
     </div>
+    <style>
+       .main {
+            text-align: center;
+        }
+    </style>
 </body>
 </html>
