--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="style.css">
     <title>Home</title>
 </head>
 <body>
@@ -12,10 +14,5 @@
         <p>This is what goes along with my video for better understanding</p>
         <button onclick="window.location.href='start.html'">Begin</button>
     </div>
-    <style>
-       .main {
-            text-align: center;
-        }
-    </style>
 </body>
 </html>
