--- a/index.html
+++ b/index.html
@@ -13,9 +13,13 @@
 <body>
     <div class="main">
         <h1>REL Assesment RA3 2024 (Term 3)</h1>
-        <h2>Welcome!! Press Begin to start!!</h2>
-        <p>This is what goes along with my video for better understanding</p>
-        <button onclick="window.location.href='start.html'">Begin</button>
+        <h2>The Parable of the Sower</h2>
+        <p>This webiste goes along with my REL Video For Better Understanding</p>
+        <p>You can Watch the Video Here:</p>
+        <a href="#">Link</a>
+    </div>
+    <div class="button">
+        <button onclick="window.location.href='start.html'">Begin</button>  
     </div>
 </body>
 </html>
