new images and updated start.html

--- a/start.html
+++ b/start.html
@@ -9,13 +9,19 @@
 <body>
     <div class="slideshow-container">
         <div class="mySlides fade">
-            <img src="image1.jpg" style="width:100%">
+            <img src="Image One.webp" style="width:100%">
         </div>
         <div class="mySlides fade">
-            <img src="image2.jpg" style="width:100%">
+            <img src="Image Two.webp" style="width:100%">
         </div>
         <div class="mySlides fade">
-            <img src="image3.jpg" style="width:100%">
+            <img src="Image Three.webp" style="width:100%">
+        </div>
+        <div class="mySlides fade">
+            <img src="Image Four.webp" style="width:100%">
+        </div>
+        <div class="mySlides fade">
+            <img src="Image Five.webp" style="width:100%">
         </div>
     
         <!-- Next and previous buttons -->
@@ -29,6 +35,12 @@
         <span class="dot" onclick="currentSlide(1)"></span>
         <span class="dot" onclick="currentSlide(2)"></span>
         <span class="dot" onclick="currentSlide(3)"></span>
+        <span class="dot" onclick="currentSlide(4)"></span>
+        <span class="dot" onclick="currentSlide(5)"></span>
+    </div>
+
+    <div class="button">
+        <button onclick="window.location.href='index.html'">Done</button>
     </div>
 
     <script src="script.js"></script>
