New Video + Updated styles.css and start.html

--- a/start.html
+++ b/start.html
@@ -7,6 +7,16 @@
     <title>The Parable of the Sower</title>
 </head>
 <body>
+    <div class="title">
+        <h1>The Parable of the Sower</h1>
+    </div>
+    <div class="subtitle">
+        <h3>Matthew 13:26-33</h3>
+    </div>
+    <div class="author">
+        <p>Author: John Matthew</p>
+    </div>
+
     <div class="slideshow-container">
         <div class="mySlides fade">
             <img src="Image One.webp" style="width:100%">
@@ -41,6 +51,16 @@
 
     <div class="button">
         <button onclick="window.location.href='index.html'">Done</button>
+    </div>
+
+    <div class="extravidtitle">
+        <h2>Another short video explination (Not Mine)</h2>
+    </div>
+
+    <div class="extravid">
+        <video width="560" height="315" controls>
+            <source src="Which_One_Are_You_The_Parable_of_the_Sower.mp4" type="video/mp4">
+        </video>
     </div>
 
     <script src="script.js"></script>
