Updated folder structure

--- a/pages/start.html
+++ b/pages/start.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/styles/style.css">
     <title>The Parable of the Sower</title>
 </head>
 <body>
@@ -19,19 +19,19 @@
 
     <div class="slideshow-container">
         <div class="mySlides fade">
-            <img src="Image One.webp" style="width:100%">
+            <img src="/content/Image One.webp" style="width:100%">
         </div>
         <div class="mySlides fade">
-            <img src="Image Two.webp" style="width:100%">
+            <img src="/content/Image Two.webp" style="width:100%">
         </div>
         <div class="mySlides fade">
-            <img src="Image Three.webp" style="width:100%">
+            <img src="/content/Image Three.webp" style="width:100%">
         </div>
         <div class="mySlides fade">
-            <img src="Image Four.webp" style="width:100%">
+            <img src="/content/Image Four.webp" style="width:100%">
         </div>
         <div class="mySlides fade">
-            <img src="Image Five.webp" style="width:100%">
+            <img src="/content/Image Five.webp" style="width:100%">
         </div>
     
         <!-- Next and previous buttons -->
@@ -59,10 +59,10 @@
 
     <div class="extravid">
         <video width="560" height="315" controls>
-            <source src="Which_One_Are_You_The_Parable_of_the_Sower.mp4" type="video/mp4">
+            <source src="/content/Which_One_Are_You_The_Parable_of_the_Sower.mp4" type="video/mp4">
         </video>
     </div>
 
-    <script src="script.js"></script>
+    <script src="/scripts/script.js"></script>
 </body>
 </html>
