--- a/pages/start.html
+++ b/pages/start.html
@@ -1,68 +1,101 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/styles/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/styles/style.css" />
     <title>The Parable of the Sower</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="title">
-        <h1>The Parable of the Sower</h1>
+      <h1>The Parable of the Sower</h1>
     </div>
     <div class="subtitle">
-        <h3>Matthew 13:26-33</h3>
+      <h3>Matthew 13:26-33</h3>
     </div>
     <div class="author">
-        <p>Author: John Matthew</p>
+      <p>Author: John Matthew</p>
     </div>
 
     <div class="slideshow-container">
-        <div class="mySlides fade">
-            <img src="/content/Image One.webp" style="width:100%">
-        </div>
-        <div class="mySlides fade">
-            <img src="/content/Image Two.webp" style="width:100%">
-        </div>
-        <div class="mySlides fade">
-            <img src="/content/Image Three.webp" style="width:100%">
-        </div>
-        <div class="mySlides fade">
-            <img src="/content/Image Four.webp" style="width:100%">
-        </div>
-        <div class="mySlides fade">
-            <img src="/content/Image Five.webp" style="width:100%">
-        </div>
-    
-        <!-- Next and previous buttons -->
-        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-        <a class="next" onclick="plusSlides(1)">&#10095;</a>
+      <div class="mySlides fade">
+        <img src="Image One.webp" style="width:100%" />
+      </div>
+      <div class="mySlides fade">
+        <img src="Image Two.webp" style="width:100%" />
+      </div>
+      <div class="mySlides fade">
+        <img src="Image Three.webp" style="width:100%" />
+      </div>
+      <div class="mySlides fade">
+        <img src="Image Four.webp" style="width:100%" />
+      </div>
+      <div class="mySlides fade">
+        <img src="Image Five.webp" style="width:100%" />
+      </div>
+
+      <!-- Next and previous buttons -->
+      <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+      <a class="next" onclick="plusSlides(1)">&#10095;</a>
     </div>
-    <br>
-    
+    <br />
+
     <!-- The dots/circles -->
     <div style="text-align:center">
-        <span class="dot" onclick="currentSlide(1)"></span>
-        <span class="dot" onclick="currentSlide(2)"></span>
-        <span class="dot" onclick="currentSlide(3)"></span>
-        <span class="dot" onclick="currentSlide(4)"></span>
-        <span class="dot" onclick="currentSlide(5)"></span>
+      <span class="dot" onclick="currentSlide(1)"></span>
+      <span class="dot" onclick="currentSlide(2)"></span>
+      <span class="dot" onclick="currentSlide(3)"></span>
+      <span class="dot" onclick="currentSlide(4)"></span>
+      <span class="dot" onclick="currentSlide(5)"></span>
     </div>
 
     <div class="button">
-        <button onclick="window.location.href='index.html'">Done</button>
+      <button onclick="window.location.href='index.html'">Done</button>
     </div>
 
     <div class="extravidtitle">
-        <h2>Another short video explination (Not Mine)</h2>
+      <h2>Another short video explination (Not Mine)</h2>
+    </div>
+    <div class="video">
+      <iframe
+        width="1280"
+        height="720"
+        src="https://www.youtube.com/embed/sSZW67byzpc"
+        title="Which One Are You? The Parable of the Sower"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        referrerpolicy="strict-origin-when-cross-origin"
+        allowfullscreen="true"
+      ></iframe>
     </div>
 
-    <div class="extravid">
-        <video width="560" height="315" controls>
-            <source src="/content/Which_One_Are_You_The_Parable_of_the_Sower.mp4" type="video/mp4">
-        </video>
-    </div>
+    <script>
+          let slideIndex = 1;
+      showSlides(slideIndex);
 
-    <script src="/scripts/script.js"></script>
-</body>
+      function plusSlides(n) {
+          showSlides(slideIndex += n);
+      }
+
+      function currentSlide(n) {
+          showSlides(slideIndex = n);
+      }
+
+      function showSlides(n) {
+          let i;
+          let slides = document.getElementsByClassName("mySlides");
+          let dots = document.getElementsByClassName("dot");
+          if (n > slides.length) {slideIndex = 1}
+          if (n < 1) {slideIndex = slides.length}
+          for (i = 0; i < slides.length; i++) {
+              slides[i].style.display = "none";
+          }
+          for (i = 0; i < dots.length; i++) {
+              dots[i].className = dots[i].className.replace(" active", "");
+          }
+          slides[slideIndex-1].style.display = "block";
+          dots[slideIndex-1].className += " active";
+      }
+    </script>
+  </body>
 </html>
