updated image paths

--- a/pages/start.html
+++ b/pages/start.html
@@ -19,19 +19,19 @@
 
     <div class="slideshow-container">
       <div class="mySlides fade">
-        <img src="Image One.webp" style="width:100%" />
+        <img src="/content/Image One.webp" style="width:100%" />
       </div>
       <div class="mySlides fade">
-        <img src="Image Two.webp" style="width:100%" />
+        <img src="/content/Image Two.webp" style="width:100%" />
       </div>
       <div class="mySlides fade">
-        <img src="Image Three.webp" style="width:100%" />
+        <img src="/content/Image Three.webp" style="width:100%" />
       </div>
       <div class="mySlides fade">
-        <img src="Image Four.webp" style="width:100%" />
+        <img src="/content/Image Four.webp" style="width:100%" />
       </div>
       <div class="mySlides fade">
-        <img src="Image Five.webp" style="width:100%" />
+        <img src="/content/Image Five.webp" style="width:100%" />
       </div>
 
       <!-- Next and previous buttons -->
