--- a/pages/index.html
+++ b/pages/index.html
@@ -16,7 +16,7 @@
         <h2>The Parable of the Sower</h2>
         <p>This webiste goes along with my REL Video For Better Understanding</p>
         <p>You can Watch the Video Here:</p>
-        <a href="#">Link</a>
+        <a href="https://youtu.be/ZPIXPAwUzes">Link</a>
     </div>
     <div class="button">
         <button onclick="window.location.href='start.html'">Begin</button>  
