changed 'done' button to 'Home' because Arjun wanted wanted me to

--- a/pages/start.html
+++ b/pages/start.html
@@ -50,7 +50,7 @@
     </div>
 
     <div class="button">
-      <button onclick="window.location.href='index.html'">Done</button>
+      <button onclick="window.location.href='index.html'">Home</button>
     </div>
 
     <div class="dropdown">
